--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
+body {
+  background-color: blue;
+}
 
+h1 {
+  text-align: center;
+}
+
+form {
+  text-align: center; 
+}
+
+p {
+    text-align: center; 
+}
+
+div {
+  text-align: center; 
+}
